--- a/lab_01_24/app/CMakeLists.txt
+++ b/lab_01_24/app/CMakeLists.txt
@@ -1,20 +1,9 @@
-project(app VERSION 0.1 LANGUAGES CXX)
-
-find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
-find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)
-
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
-
-set(CMAKE_AUTOUIC ON)
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTORCC ON)
 
 set(SOURCE_DIR src)
 set(UI_DIR ui)
 set(MODEL_DIR model)
 
 set(PROJECT_SOURCES
-        ${SOURCE_DIR}/main.cpp
         ${SOURCE_DIR}/${UI_DIR}/mainwindow.cpp
         ${SOURCE_DIR}/${UI_DIR}/mainwindow.h
         ${SOURCE_DIR}/${UI_DIR}/itemdelegate.cpp
@@ -29,9 +18,14 @@ set(PROJECT_SOURCES
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(app
+    qt_add_library(app_lib SHARED
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+    )
+    qt_add_executable(app
+        MANUAL_FINALIZATION
+        ${SOURCE_DIR}/main.cpp
+#        ${PROJECT_SOURCES}
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET lab_01 APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
@@ -40,18 +34,19 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
 else()
     if(ANDROID)
         add_library(app SHARED
-            ${PROJECT_SOURCES}
+            ${SOURCE_DIR}/main.cpp
         )
 # Define properties for Android with Qt 5 after find_package() calls as:
 #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_executable(app
-            ${PROJECT_SOURCES}
-        )
+        add_library(app_lib SHARED ${PROJECT_SOURCES})
+        add_executable(app ${SOURCE_DIR}/main.cpp ${PROJECT_SOURCES})
     endif()
 endif()
 
-target_link_libraries(app PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(app_lib PUBLIC Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(app PRIVATE app_lib)
+
 
 set_target_properties(app PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
@@ -65,4 +60,4 @@ if(QT_VERSION_MAJOR EQUAL 6)
     qt_finalize_executable(app)
 endif()
 
-install(TARGETS app DESTINATION . CONFIGURATIONS Release)
+install(TARGETS app app_lib DESTINATION . CONFIGURATIONS Release)
