--- a/lab_01_24/tests/CMakeLists.txt
+++ b/lab_01_24/tests/CMakeLists.txt
@@ -2,7 +2,4 @@ project(tests LANGUAGES CXX)
 
 find_package(GTest REQUIRED)
 
-set(UNIT_TESTS_DIR unit_tests)
-
-add_executable(tests main.cpp)
-target_link_libraries(tests GTest::gtest)
+add_subdirectory(unit_tests)
