--- a/lab_01_24/CMakeLists.txt
+++ b/lab_01_24/CMakeLists.txt
@@ -1,19 +1,30 @@
-project(lab_01 LANGUAGES CXX)
-
 cmake_minimum_required(VERSION 3.5)
+
+project(lab_01 VERSION 1.0.0 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-if (test)
+find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
+find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)
+
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
+set(CMAKE_AUTOUIC ON)
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
+
+
+if (code-cvrg)
     list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake/modules)
 
     include(CodeCoverage)
     append_coverage_compiler_flags()
 
-    enable_testing()
-
-    add_subdirectory(tests)
 endif()
+
+#enable_testing()
+#
+#add_subdirectory(tests)
 
 add_subdirectory(app)
