--- a/lab_01_24/app/CMakeLists.txt
+++ b/lab_01_24/app/CMakeLists.txt
@@ -3,29 +3,30 @@ set(SOURCE_DIR src)
 set(UI_DIR ui)
 set(MODEL_DIR model)
 
-set(PROJECT_SOURCES
-        ${SOURCE_DIR}/${UI_DIR}/mainwindow.cpp
-        ${SOURCE_DIR}/${UI_DIR}/mainwindow.h
-        ${SOURCE_DIR}/${UI_DIR}/itemdelegate.cpp
-        ${SOURCE_DIR}/${UI_DIR}/itemdelegate.h
+set(APP_LIB_SOURCES
         ${SOURCE_DIR}/${UI_DIR}/canvas.cpp
         ${SOURCE_DIR}/${UI_DIR}/canvas.h
-        ${SOURCE_DIR}/${UI_DIR}/mainwindow.ui
         ${SOURCE_DIR}/${MODEL_DIR}/triangle.cpp
         ${SOURCE_DIR}/${MODEL_DIR}/triangle.h
         ${SOURCE_DIR}/${MODEL_DIR}/setofpoints.cpp
         ${SOURCE_DIR}/${MODEL_DIR}/setofpoints.h
 )
 
+set(APP_SOURCES
+        ${SOURCE_DIR}/main.cpp
+        ${SOURCE_DIR}/${UI_DIR}/mainwindow.cpp
+        ${SOURCE_DIR}/${UI_DIR}/mainwindow.h
+        ${SOURCE_DIR}/${UI_DIR}/itemdelegate.cpp
+        ${SOURCE_DIR}/${UI_DIR}/itemdelegate.h
+        ${SOURCE_DIR}/${UI_DIR}/mainwindow.ui
+)
+
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_library(app_lib SHARED
-        MANUAL_FINALIZATION
-        ${PROJECT_SOURCES}
+        ${APP_LIB_SOURCES}
     )
     qt_add_executable(app
-        MANUAL_FINALIZATION
-        ${SOURCE_DIR}/main.cpp
-#        ${PROJECT_SOURCES}
+        ${APP_SOURCES}
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET lab_01 APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
@@ -34,18 +35,19 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
 else()
     if(ANDROID)
         add_library(app SHARED
-            ${SOURCE_DIR}/main.cpp
+            ${APP_SOURCES}
         )
 # Define properties for Android with Qt 5 after find_package() calls as:
 #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_library(app_lib SHARED ${PROJECT_SOURCES})
-        add_executable(app ${SOURCE_DIR}/main.cpp ${PROJECT_SOURCES})
+        add_library(app_lib SHARED ${APP_LIB_SOURCES})
+        add_executable(app ${APP_SOURCES})
     endif()
 endif()
 
-target_link_libraries(app_lib PUBLIC Qt${QT_VERSION_MAJOR}::Widgets)
-target_link_libraries(app PRIVATE app_lib)
+target_link_libraries(app_lib PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_include_directories(app_lib INTERFACE ${SOURCE_DIR}/${UI_DIR} ${SOURCE_DIR}/${MODEL_DIR})
+target_link_libraries(app PRIVATE app_lib Qt${QT_VERSION_MAJOR}::Widgets)
 
 
 set_target_properties(app PROPERTIES
@@ -60,4 +62,4 @@ if(QT_VERSION_MAJOR EQUAL 6)
     qt_finalize_executable(app)
 endif()
 
-install(TARGETS app app_lib DESTINATION . CONFIGURATIONS Release)
+install(TARGETS app app_lib RUNTIME DESTINATION . CONFIGURATIONS Release)
