add lab_03 func tests

--- a/lab_03_01/app/CMakeLists.txt
+++ b/lab_03_01/app/CMakeLists.txt
@@ -3,11 +3,7 @@ set(SOURCE_DIR src)
 set(UI_DIR ui)
 set(MODEL_DIR model)
 
-set(PROJECT_SOURCES
-        ${SOURCE_DIR}/main.cpp
-        ${SOURCE_DIR}/${UI_DIR}/mainwindow.cpp
-        ${SOURCE_DIR}/${UI_DIR}/mainwindow.h
-        ${SOURCE_DIR}/${UI_DIR}/mainwindow.ui
+set(APP_LIB_SOURCES
         ${SOURCE_DIR}/${MODEL_DIR}/drawer.h
         ${SOURCE_DIR}/${MODEL_DIR}/drawer.cpp
         ${SOURCE_DIR}/${MODEL_DIR}/controller.h
@@ -18,30 +14,32 @@ set(PROJECT_SOURCES
         ${SOURCE_DIR}/${MODEL_DIR}/algorithms/dda.cpp
 )
 
-include_directories(${SOURCE_DIR}/${MODEL_DIR}, ${SOURCE_DIR}/${UI_DIR})
+set(APP_SOURCES
+    ${SOURCE_DIR}/main.cpp
+    ${SOURCE_DIR}/${UI_DIR}/mainwindow.cpp
+    ${SOURCE_DIR}/${UI_DIR}/mainwindow.h
+    ${SOURCE_DIR}/${UI_DIR}/mainwindow.ui
+)
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
+    qt_add_library(app_lib SHARED
+        ${APP_LIB_SOURCES}
+    )
     qt_add_executable(app
-        MANUAL_FINALIZATION
-        ${PROJECT_SOURCES}
+        ${APP_SOURCES}
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET lab_01 APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
 #                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
 # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
-    if(ANDROID)
-        add_library(app SHARED
-            ${PROJECT_SOURCES}
-        )
-# Define properties for Android with Qt 5 after find_package() calls as:
-#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
-    else()
-        add_executable(app ${PROJECT_SOURCES})
-    endif()
+    add_library(app_lib SHARED ${APP_LIB_SOURCES})
+    add_executable(app ${APP_SOURCES})
 endif()
 
-target_link_libraries(app PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Charts)
+target_link_libraries(app_lib PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Charts)
+target_include_directories(app_lib INTERFACE ${SOURCE_DIR}/${UI_DIR} ${SOURCE_DIR}/${MODEL_DIR})
+target_link_libraries(app PRIVATE app_lib Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Charts)
 
 
 set_target_properties(app PROPERTIES
@@ -56,4 +54,4 @@ if(QT_VERSION_MAJOR EQUAL 6)
     qt_finalize_executable(app)
 endif()
 
-install(TARGETS app DESTINATION . CONFIGURATIONS Release)
+install(TARGETS app app_lib RUNTIME DESTINATION . CONFIGURATIONS Release)
